src/objects/SublocationDetail__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>SublocationDetails</relationshipLabel>
        <relationshipName>SublocationDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_items__c</fullName>
        <formula>WWW_Detail__r.Number_Of_Items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of  items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_items_work__c</fullName>
        <label>Number of items work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectCode__c</fullName>
        <formula>WWW_Detail__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <formula>WWW_Detail__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_sum__c</fullName>
        <formula>IF(   WWW_Detail__r.RecordType.DeveloperName == &apos;Delivered_2_Hub&apos;, true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To sum?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WWW_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WWW-Detail</label>
        <referenceTo>WWW_Detail__c</referenceTo>
        <relationshipLabel>SublocationDetails</relationshipLabel>
        <relationshipName>SublocationDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WWW_Detail_r_RecordType_DeveloperName__c</fullName>
        <formula>WWW_Detail__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WWW_Detail__r.RecordType.DeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWWid__c</fullName>
        <formula>WWW_Detail__r.WWW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WWWid</label>
        <type>Text</type>
    </fields>
    <label>SublocationDetail</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>SublocationDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SublocationDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>